# intro-to-opengl

./: CMakeLists.txt
res/: basicShader.fs  basicShader.vs
src/: camera.h  display.cpp  display.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h
